fix: ensure search bar and submit button are well aligned

--- a/source/scss/components/search/searchbar.scss
+++ b/source/scss/components/search/searchbar.scss
@@ -6,6 +6,7 @@
 #wppedia_searchform {
 	position: relative;
 	display: flex;
+    align-items: baseline;
 	flex-wrap: nowrap;
 	margin-bottom: 1.5rem;
 	.search-field {
